Add install entry to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ cache:
   directories:
     - node_modules
 before_install:
-  - npm update
-script:
   - cd VueJS
+  - npm update
+install:
+  - npm install
+script:
   - npm test
