--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ before_install:
 install:
   - npm install
 script:
-  - npm test
+  - npm run test
+  - npm run lint
+after_success:
+  - npm run build
