--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,17 @@ cache:
     - node_modules
 before_install:
   - cd VueJS
+  # install Neo4j locally (workaround for travis service not working)
+  - wget dist.neo4j.org/neo4j-community-3.5.14-unix.tar.gz
+  - tar -xzf neo4j-community-3.5.14-unix.tar.gz
+  - cp -rf ./neo4j.conf ./neo4j-community-3.5.14/conf/neo4j.conf
+  - neo4j-community-3.5.14/bin/neo4j-admin set-initial-password passwd
+  - neo4j-community-3.5.14/bin/neo4j start
 install:
   - npm update
   - npm install
 script:
-  - npm run test
+  - npm run test -- --forceExit
   - npm run lint
 after_success:
   - npm run build
